Added README file

--- a/Stock_Market_Analysis_using_Twitter_Data_Colab.ipynb
+++ b/Stock_Market_Analysis_using_Twitter_Data_Colab.ipynb
@@ -56,14 +56,32 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "dMEM9bcTP5Ep"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# Initializing Tweepy Client for Twitter API Access\n",
-    "bearer_token = 'AAAAAAAAAAAAAAAAAAAAAL0D0AEAAAAAVaybQyI7NZ32U6xwspgMRlsO7V8%3DNuFRl0OYpoIKfLhj0lVQnxMW2xkJufhVUjkbVFyHmkmeZqHIC7'\n",
-    "client = tweepy.Client(bearer_token = bearer_token, wait_on_rate_limit = True)"
+    "import json\n",
+    "import tweepy\n",
+    "\n",
+    "# Load the creds.json file securely\n",
+    "try:\n",
+    "    with open(\"creds.json\", \"r\") as file:\n",
+    "        creds = json.load(file)\n",
+    "\n",
+    "    bearer_token = creds.get(\"BEARER_TOKEN\", None)\n",
+    "\n",
+    "    # Check if the token loaded correctly (optional)\n",
+    "    if bearer_token:\n",
+    "        print(\"Bearer Token Loaded Successfully\")\n",
+    "    else:\n",
+    "        print(\"Bearer Token Not Found\")\n",
+    "\n",
+    "    # Initialize Tweepy Client\n",
+    "    client = tweepy.Client(bearer_token=bearer_token, wait_on_rate_limit=True)\n",
+    "\n",
+    "except FileNotFoundError:\n",
+    "    print(\"creds.json file not found. Make sure it exists in the project directory.\")\n",
+    "except Exception as e:\n",
+    "    print(f\"Error loading bearer token: {e}\")\n"
    ]
   },
   {
@@ -560,21 +578,6 @@
    "execution_count": null,
    "metadata": {
     "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "3eJYH7DTyQnr",
-    "outputId": "6eb3030f-9ddb-47f1-a8f0-5b1160fe654d"
-   },
-   "outputs": [],
-   "source": [
-    "!pip install wordcloud"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
      "base_uri": "https://localhost:8080/",
      "height": 607
     },
@@ -634,17 +637,6 @@
     "\n",
     "\n",
     "### **1. TextBlob Sentiment Analysis**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "f-FpSW4_Ey2x"
-   },
-   "outputs": [],
-   "source": [
-    "pip install textblob"
    ]
   },
   {
@@ -737,21 +729,6 @@
    },
    "source": [
     "### **2. VADER Sentiment Analysis**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "1axs-IzQMRvq",
-    "outputId": "22925433-f560-4417-8352-912521b255dd"
-   },
-   "outputs": [],
-   "source": [
-    "pip install vaderSentiment"
    ]
   },
   {
@@ -918,17 +895,6 @@
    },
    "source": [
     "### **Emotion Analysis Using Lexicon-Based Approach**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "crFi5pIzSNTm"
-   },
-   "outputs": [],
-   "source": [
-    "pip install nltk"
    ]
   },
   {
